paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.compile.log
error[E0308]: mismatched types
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:101:16
    |
101 |     if (0i32 + 0i64).id() != 9 {
    |                ^^^^ expected `i32`, found `i64`

error[E0277]: cannot add `i64` to `i32`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:101:14
    |
101 |     if (0i32 + 0i64).id() != 9 {
    |              ^ no implementation for `i32 + i64`
    |
    = help: the trait `Add<i64>` is not implemented for `i32`
    = help: the following other types implement trait `Add<Rhs>`:
              `&i32` implements `Add<i32>`
              `&i32` implements `Add`
              `i32` implements `Add<&i32>`
              `i32` implements `Add`

error[E0308]: mismatched types
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:104:16
    |
104 |     if (0i64 + 0i128).id() != 11 {
    |                ^^^^^ expected `i64`, found `i128`

error[E0277]: cannot add `i128` to `i64`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:104:14
    |
104 |     if (0i64 + 0i128).id() != 11 {
    |              ^ no implementation for `i64 + i128`
    |
    = help: the trait `Add<i128>` is not implemented for `i64`
    = help: the following other types implement trait `Add<Rhs>`:
              `&i64` implements `Add<i64>`
              `&i64` implements `Add`
              `i64` implements `Add<&i64>`
              `i64` implements `Add`

error[E0308]: mismatched types
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:107:16
    |
107 |     if (0i32 + 0i128).id() != 11 {
    |                ^^^^^ expected `i32`, found `i128`

error[E0277]: cannot add `i128` to `i32`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:107:14
    |
107 |     if (0i32 + 0i128).id() != 11 {
    |              ^ no implementation for `i32 + i128`
    |
    = help: the trait `Add<i128>` is not implemented for `i32`
    = help: the following other types implement trait `Add<Rhs>`:
              `&i32` implements `Add<i32>`
              `&i32` implements `Add`
              `i32` implements `Add<&i32>`
              `i32` implements `Add`

error[E0308]: mismatched types
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:110:27
    |
110 |     if ((E::Pos as i32) + 0u32).id() != (0i32 + 0u32).id() {
    |                           ^^^^ expected `i32`, found `u32`

error[E0277]: cannot add `u32` to `i32`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:110:25
    |
110 |     if ((E::Pos as i32) + 0u32).id() != (0i32 + 0u32).id() {
    |                         ^ no implementation for `i32 + u32`
    |
    = help: the trait `Add<u32>` is not implemented for `i32`
    = help: the following other types implement trait `Add<Rhs>`:
              `&i32` implements `Add<i32>`
              `&i32` implements `Add`
              `i32` implements `Add<&i32>`
              `i32` implements `Add`

error[E0308]: mismatched types
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:110:49
    |
110 |     if ((E::Pos as i32) + 0u32).id() != (0i32 + 0u32).id() {
    |                                                 ^^^^ expected `i32`, found `u32`

error[E0277]: cannot add `u32` to `i32`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_001/target.rs:110:47
    |
110 |     if ((E::Pos as i32) + 0u32).id() != (0i32 + 0u32).id() {
    |                                               ^ no implementation for `i32 + u32`
    |
    = help: the trait `Add<u32>` is not implemented for `i32`
    = help: the following other types implement trait `Add<Rhs>`:
              `&i32` implements `Add<i32>`
              `&i32` implements `Add`
              `i32` implements `Add<&i32>`
              `i32` implements `Add`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.